// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contract-event-stream tests in node environment can track events emitted by send method 1`] = `
Object {
  "address": Anything,
  "blockHash": Anything,
  "blockNumber": Anything,
  "event": "Update",
  "id": Anything,
  "logIndex": Anything,
  "raw": Object {
    "data": Anything,
    "topics": Array [
      Anything,
    ],
  },
  "returnValues": Object {
    "0": BigNumber {
      "_hex": "0x00",
    },
    "storedData": BigNumber {
      "_hex": "0x00",
    },
  },
  "signature": Anything,
  "transactionHash": Anything,
  "transactionIndex": 0,
  "type": "mined",
}
`;

exports[`contract-event-stream tests in node environment can track events emitted by send method 2`] = `
Object {
  "address": Anything,
  "blockHash": Anything,
  "blockNumber": Anything,
  "event": "Update",
  "id": Anything,
  "logIndex": Anything,
  "raw": Object {
    "data": Anything,
    "topics": Array [
      Anything,
    ],
  },
  "returnValues": Object {
    "0": BigNumber {
      "_hex": "0x05",
    },
    "storedData": BigNumber {
      "_hex": "0x05",
    },
  },
  "signature": Anything,
  "transactionHash": Anything,
  "transactionIndex": 0,
  "type": "mined",
}
`;
